# rp2040-sofle-choc

./: .gitmodules  CMakeLists.txt  kbd.c  kbd.cpp  main.c  test.c  tusb_config.h  usb_descriptors.c
keyboard/: CMakeLists.txt  keyboard.c  keyboard.h
neopixel/: CMakeLists.txt  neopixel.c  neopixel.h
oled/: CMakeLists.txt  oled.cpp  oled.h
usb/: CMakeLists.txt  usb.c  usb.h  usb_descriptors.c
